# Rockpool

./: .gitignore  CMakeLists.txt  README.md
docs/: Improvements.txt  Plan.txt  Plan2.txt  Plan3  Plan4.txt  Plan5.txt  Plan6.txt  Plan7.txt  bugs.txt  terrain edit  test.txt  toDo.txt
docs/layout design/Mods/Wonderful Mod/: resources.txt
docs/layout design/Resources/: Resources.txt
media/Primatives/: Cone.mesh  Sphere.mesh
media/materials/scripts/: android.material
media/models/: android.mesh
media/temp/: forest.json  test.material
setup/: plugins.cfg  resources.cfg
src/: TerrainInfoHandler.cpp  TerrainInfoHandler.h
src/graphics/: OgreComponent.cpp  OgreComponent.h  Trackball.c
src/map/: Main.cpp  Main.h  Map.cpp  Map.h  MapDecal.cpp  MapDecal.h  SelectionManager.cpp  SelectionManager.h  SkyBox.cpp  SkyBox.h  Terrain.cpp  Terrain.h
src/map/Object/: MeshObject.cpp  MeshObject.h  Object.cpp  Object.h
src/system/: BrushManager.cpp  BrushManager.h  HierarchyClipboardManager.cpp  HierarchyClipboardManager.h  ResourceManager.cpp  ResourceManager.h  SkyBoxManager.cpp  SkyBoxManager.h
src/system/Command/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  TerrainCommand.cpp  TerrainCommand.h  TerrainEditCommand.cpp  TerrainEditCommand.h  TerrainTextureCommand.cpp  TerrainTextureCommand.h
src/system/Command/Object/: AddObjectCommand.cpp  AddObjectCommand.h  ArrangeObjectCommand.cpp  ArrangeObjectCommand.h  DeleteObjectCommand.cpp  DeleteObjectCommand.h  DuplicateObjectCommand.cpp  DuplicateObjectCommand.h  MoveObjectCommand.cpp  MoveObjectCommand.h  ObjectCommand.cpp  ObjectCommand.h  PasteObjectCommand.cpp  PasteObjectCommand.h  PositionObjectCommand.cpp  PositionObjectCommand.h  ScaleObjectCommand.cpp  ScaleObjectCommand.h
src/ui/: Application.cpp  Application.h  BottomPanel.cpp  BottomPanel.h  GLCanvas.cpp  GLCanvas.h  MainFrame.cpp  MainFrame.h  MapLoadProgressDialog.h  MapPropertiesDialog.cpp  MapPropertiesDialog.h  NewMapDialog.cpp  NewMapDialog.h  ObjectHierarchy.cpp  ObjectHierarchy.h  RenderTimer.cpp  RenderTimer.h  ResourceBrowser.cpp  ResourceBrowser.h  TerrainInfoHandler.cpp  TerrainInfoHandler.h  TerrainInfoLayerBox.cpp  TerrainInfoLayerBox.h  wxIDs.h
src/ui/Dialogs/: MapLoadProgressDialog.cpp  MapLoadProgressDialog.h  MapPropertiesDialog.cpp  MapPropertiesDialog.h  MapPropertiesSkyBoxDialog.cpp  MapPropertiesSkyBoxDialog.h  NewMapDialog.h  ResourceSelectionPopup.cpp  ResourceSelectionPopup.h  TerrainLayerResourceDialog.cpp  TerrainLayerResourceDialog.h
src/ui/Hierarchy/: HierarchyObjectInformation.cpp  HierarchyObjectInformation.h  HierarchyRightClickMenu.cpp  HierarchyRightClickMenu.h  HierarchyRightClickNew.cpp  HierarchyRightClickNew.h  HierarchyTree.cpp  HierarchyTree.h  ObjectHierarchy.cpp  ObjectHierarchy.h
src/ui/Inspector/: InspectorComponent.cpp  InspectorComponent.h  MultipleSelectionTitleComponent.cpp  MultipleSelectionTitleComponent.h  NoSelectionComponent.cpp  NoSelectionComponent.h  NumberTextCtrl.cpp  NumberTextCtrl.h  ObjectInspector.cpp  ObjectInspector.h  ObjectNameComponent.cpp  ObjectNameComponent.h  ObjectTransformComponent.cpp  ObjectTransformComponent.h  ObjectTransformNumberCtrl.cpp  ObjectTransformNumberCtrl.h
src/ui/Resource/: ResourceBrowser.cpp  ResourceBrowser.h  ResourceDragPopup.cpp  ResourceDragPopup.h  ResourcePanel.cpp  ResourcePanel.h  ResourceTile.cpp  ResourceTile.h  ResourceTileCover.cpp  ResourceTileCover.h
src/ui/Tools/: TerrainEditToolPreferences.cpp  TerrainEditToolPreferences.h  TerrainHeightToolPreferences.cpp  TerrainHeightToolPreferences.h  TerrainSmoothToolPreferences.cpp  TerrainSmoothToolPreferences.h  TerrainTextureToolPreferences.cpp  TerrainTextureToolPreferences.h  ToolPreferences.cpp  ToolPreferences.h  ToolPreferencesHandler.cpp  ToolPreferencesHandler.h  ToolsPanelHandler.cpp  ToolsPanelHandler.h
src/util/: tinyxml2.cpp  tinyxml2.h
